discussion/kv_engine/170266/170266_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: FollyExecutorPool cancel tasks in cpuPool queue

Add a mechanism to remove work for a given taskable from the
cpuPool queue.

This is implemented by interposing our own queue of work underneath
the queue in the cpuPool to allow us to remove tasks from the queue
when we unregister a taskable. Now, when we schedule a task we
enqueue it in a queue in a custom executor and schedule a task on the
base executor to pop a task from the queue and run it. To remove tasks
when we unregister a taskable we pop all elements of both our queue
and the base executors queue and re-push only those of the other
taskables and manually cancel each task for the taskable going away.

todo: update folly executor pool header comment
      runBeforeShutdown probably needs fixing, add isDead check to
      fn

Change-Id: Idcbf1737b80c3d3b92ed62adb3d4d164a2cf4266

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-08 17:44:24.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-08 19:15:46.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25547/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14254/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/executor/folly_executorpool.h b/executor/folly_executorpool.h
index 6d27a4f02..2c1cd747f 100644
--- a/executor/folly_executorpool.h
+++ b/executor/folly_executorpool.h
@@ -179,7 +179,6 @@ public:
                      const CookieIface* cookie,
                      const AddStatFn&amp; add_stat) override;
 
-
 private:
     /// @returns the CPU pool to use for the given task type.
     CustomFollyCPUExecutor* getPoolForTaskType(task_type_t type);

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14254/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15411/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/custom_folly_cpu_thread_pool_executor.h:31:19: warning: pass by value and use std::move [modernize-pass-by-value]
        QueueElem(ExTask task, folly::Func func)
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/custom_folly_cpu_thread_pool_executor.h:112:13: error: use of undeclared identifier "LOG_DEBUG" [clang-diagnostic-error]
            LOG_DEBUG("Cancelling task from runningQ with ID:{}",
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15411/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/custom_folly_cpu_thread_pool_executor.h:112:13:
error: use of undeclared identifier "LOG_DEBUG" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15411/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36853/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/executor/custom_folly_cpu_thread_pool_executor.h:112:13:
error: use of undeclared identifier "LOG_DEBUG"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36853/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18188/ : FAILURE

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87ab8) in operator delete(void*, unsigned long, std::align_val_t)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18188/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43678/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5059/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17450/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17140/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16228/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5119/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
